--- a/wp-content/themes/paylidify/style.css
+++ b/wp-content/themes/paylidify/style.css
@@ -1313,6 +1313,7 @@ header {
 --------------------------------------------------------------*/
 .site-header {
   margin-top: 30px;
+  margin-bottom: 40px;
   position: relative; }
   .site-header:after {
     content: "";
@@ -1326,6 +1327,8 @@ header {
     z-index: -10;
     transform: rotate(-12deg); }
 
+.page-careers .site-header {
+  margin-bottom: 0; }
 .page-careers .site-header:after {
   background: none;
   transform: rotate(0); }
